update user and database
